@@ -1,5 +1,5 @@
 /* M32R opcode support.  -*- C -*-
-   Copyright (C) 2000 Red Hat, Inc.
+   Copyright (C) 2000, 2001 Red Hat, Inc.
    This file is part of CGEN.  */
 
 /* This file is an addendum to m32r.cpu.  Heavy use of C code isn't
@@ -34,15 +34,23 @@
 /* -- */
 
 /* -- asm.c */
+static const char * parse_hash
+  PARAMS ((CGEN_CPU_DESC, const char **, int, unsigned long *));
+static const char * parse_hi16
+  PARAMS ((CGEN_CPU_DESC, const char **, int, unsigned long *));
+static const char * parse_slo16
+  PARAMS ((CGEN_CPU_DESC, const char **, int, long *));
+static const char * parse_ulo16
+  PARAMS ((CGEN_CPU_DESC, const char **, int, unsigned long *));
 
 /* Handle '#' prefixes (i.e. skip over them).  */
 
 static const char *
 parse_hash (cd, strp, opindex, valuep)
-     CGEN_CPU_DESC cd;
+     CGEN_CPU_DESC cd ATTRIBUTE_UNUSED;
      const char **strp;
-     int opindex;
-     unsigned long *valuep;
+     int opindex ATTRIBUTE_UNUSED;
+     unsigned long *valuep ATTRIBUTE_UNUSED;
 {
   if (**strp == '#')
     ++*strp;
@@ -184,14 +192,18 @@ parse_ulo16 (cd, strp, opindex, valuep)
 /* -- */
 
 /* -- dis.c */
+static void print_hash PARAMS ((CGEN_CPU_DESC, PTR, long, unsigned, bfd_vma, int));
+static int my_print_insn PARAMS ((CGEN_CPU_DESC, bfd_vma, disassemble_info *));
 
 /* Immediate values are prefixed with '#'.  */
 
-#define CGEN_PRINT_NORMAL(cd, info, value, attrs, pc, length) \
-do { \
-  if (CGEN_BOOL_ATTR ((attrs), CGEN_OPERAND_HASH_PREFIX)) \
-    (*info->fprintf_func) (info->stream, "#"); \
-} while (0)
+#define CGEN_PRINT_NORMAL(cd, info, value, attrs, pc, length)	\
+  do								\
+    {								\
+      if (CGEN_BOOL_ATTR ((attrs), CGEN_OPERAND_HASH_PREFIX))	\
+        (*info->fprintf_func) (info->stream, "#");		\
+    }								\
+  while (0)
 
 /* Handle '#' prefixes as operands.  */
 
@@ -208,7 +220,7 @@ print_hash (cd, dis_info, value, attrs, pc, length)
   (*info->fprintf_func) (info->stream, "#");
 }
 
-#undef CGEN_PRINT_INSN
+#undef  CGEN_PRINT_INSN
 #define CGEN_PRINT_INSN my_print_insn
 
 static int
