@@ -20,11 +20,12 @@
 */
 
 /* -- opc.h */
-#undef CGEN_DIS_HASH_SIZE
+#undef  CGEN_DIS_HASH_SIZE
 #define CGEN_DIS_HASH_SIZE 64
-#undef CGEN_DIS_HASH
+#undef  CGEN_DIS_HASH
 #define CGEN_DIS_HASH(buffer, value) (((unsigned char *) (buffer))[0] >> 2)
 
+extern long openrisc_sign_extend_16bit PARAMS ((long));
 /* -- */
 
 /* -- opc.c */
@@ -34,13 +35,17 @@
 
 #define CGEN_VERBOSE_ASSEMBLER_ERRORS
 
+static const char * parse_hi16
+  PARAMS ((CGEN_CPU_DESC, const char **, int, unsigned long *));
+static const char * parse_lo16
+  PARAMS ((CGEN_CPU_DESC, const char **, int, unsigned long *));
+
 long
 openrisc_sign_extend_16bit (value)
      long value;
 {
   return (long) (short) value;
 }
-
 
 /* Handle hi().  */
 
@@ -85,14 +90,13 @@ parse_hi16 (cd, strp, opindex, valuep)
       if (**strp == '-')
         errmsg = cgen_parse_signed_integer (cd, strp, opindex, (long *) &value);
       else
-        errmsg = cgen_parse_unsigned_integer (cd, strp, opindex, &value);
+        errmsg = cgen_parse_unsigned_integer (cd, strp, opindex, (unsigned long *) &value);
     }
   *valuep = (long) (short) (value & 0xffff);
   return errmsg;
 }
 
-
-/* Handle lo() */
+/* Handle lo().  */
 
 static const char *
 parse_lo16 (cd, strp, opindex, valuep)
@@ -135,7 +139,7 @@ parse_lo16 (cd, strp, opindex, valuep)
   if (**strp == '-')
     errmsg = cgen_parse_signed_integer (cd, strp, opindex, (long *) &value);
   else
-    errmsg = cgen_parse_unsigned_integer (cd, strp, opindex, &value);
+    errmsg = cgen_parse_unsigned_integer (cd, strp, opindex, (unsigned long *) &value);
   *valuep = (long) (short) (value & 0xffff);
   return errmsg;
 }
@@ -143,8 +147,6 @@ parse_lo16 (cd, strp, opindex, valuep)
 /* -- */
 
 /* -- ibd.h */
-extern openrisc_sign_extend_16bit (long);
+extern long openrisc_sign_extend_16bit PARAMS ((long));
 
 /* -- */
-
-
